--- a/src/app/window-manager/window-manager.component.sass
+++ b/src/app/window-manager/window-manager.component.sass
@@ -1,3 +1,20 @@
 .window
   display: block
   position: fixed
+
+.windowBar
+  display: flex
+  height: 1.2em
+  background: grey
+  align-items: center
+  justify-content: space-between
+  .action
+    background: #666
+    width: 1em
+    height: 1em
+    border: solid darkslategrey 1px
+    text-align: center
+    .reduce
+      line-height: 0.8em
+  .separator
+    flex-grow: 0.95
