--- a/src/app/windows/desktop/desktop.component.html
+++ b/src/app/windows/desktop/desktop.component.html
@@ -1,4 +1,6 @@
 <div *ngIf="size"
   [style.height]="size.height.get()"
   [style.width]="size.width.get()"
-></div>
+>
+  <app-icon [app]="apps['classic']" src="https://img.icons8.com/color/64/000000/folder-invoices.png"></app-icon>
+</div>
