--- a/src/app/windows/desktop/desktop.component.sass
+++ b/src/app/windows/desktop/desktop.component.sass
@@ -2,3 +2,8 @@ div
   background-color: red
   height: 100%
   width: 100%
+  display: flex
+  flex-basis: auto
+  flex-wrap: wrap
+  align-items: flex-start
+  align-content: flex-start
