--- a/src/app/windows/desktop/app-icon/icon.component.html
+++ b/src/app/windows/desktop/app-icon/icon.component.html
@@ -1,15 +1,15 @@
-<ng-container *ngIf="ifApp(file)">
-  <div (dblclick)="this.windowController.openNewWindow(file.launchClass)">
-    <img (click)="select()" [src]="mimeService.getPictureForFile(file, title)" >
+<ng-container *ngIf="ifApp(file.file)">
+  <div (dblclick)="this.windowController.openNewWindow(file.file.launchClass)">
+    <img (click)="select()" [src]="mimeService.getPictureForFile(file.file, title)">
     <span>{{title}}</span>
   </div>
 </ng-container>
 
-<ng-container *ngIf="!ifApp(file)">
+<ng-container *ngIf="!ifApp(file.file)">
   <div>
     <img (click)="select()"
-         (dblclick)="mimeService.getAppForFile(file) && this.windowController.openNewWindow(mimeService.getAppForFile(file), file)"
-         [src]="mimeService.getPictureForFile(file, title)" >
+         (dblclick)="mimeService.getAppForFile(file.file) && this.windowController.openNewWindow(mimeService.getAppForFile(file.file), file)"
+         [src]="mimeService.getPictureForFile(file.file, title)">
     <span>{{title}}</span>
   </div>
 </ng-container>
